# subsample

./: .gitignore  README.md  config.yaml.default  midi-map-gm-drums.yaml  midi-map.yaml.default  pyproject.toml
reference/: CREDITS.md  GM35_AcousticBassDrum.wav.analysis.json  GM36_BassDrum1.wav.analysis.json  GM37_SideStick.wav.analysis.json  GM38_AcousticSnare.wav.analysis.json  GM39_HandClap.wav.analysis.json  GM40_ElectricSnare.wav.analysis.json  GM41_LowFloorTom.wav.analysis.json  GM42_ClosedHiHat.wav.analysis.json  GM43_HighFloorTom.wav.analysis.json  GM44_PedalHiHat.wav.analysis.json  GM45_LowTom.wav.analysis.json  GM46_OpenHiHat.wav.analysis.json  GM47_LowMidTom.wav.analysis.json  GM48_HiMidTom.wav.analysis.json  GM49_CrashCymbal1.wav.analysis.json  GM50_HighTom.wav.analysis.json  GM51_RideCymbal1.wav.analysis.json  GM52_ChineseCymbal.wav.analysis.json  GM53_RideBell.wav.analysis.json  GM54_Tambourine.wav.analysis.json  GM55_SplashCymbal.wav.analysis.json  GM56_Cowbell.wav.analysis.json  GM57_CrashCymbal2.wav.analysis.json  GM58_Vibraslap.wav.analysis.json  GM59_RideCymbal2.wav.analysis.json  GM60_HiBongo.wav.analysis.json  GM61_LowBongo.wav.analysis.json  GM62_MuteHiConga.wav.analysis.json  GM63_OpenHiConga.wav.analysis.json  GM64_LowConga.wav.analysis.json  GM65_HighTimbale.wav.analysis.json  GM66_LowTimbale.wav.analysis.json  GM67_HighAgogo.wav.analysis.json  GM68_LowAgogo.wav.analysis.json  GM69_Cabasa.wav.analysis.json  GM70_Maracas.wav.analysis.json  GM71_ShortWhistle.wav.analysis.json  GM72_LongWhistle.wav.analysis.json  GM73_ShortGuiro.wav.analysis.json  (+8 more)
samples/captures/: .gitignore
samples/instrument/: .gitignore
samples/reference/: .gitignore  GM35_AcousticBassDrum.wav.analysis.json  GM36_BassDrum1.wav.analysis.json  GM37_SideStick.wav.analysis.json  GM38_AcousticSnare.wav.analysis.json  GM39_HandClap.wav.analysis.json  GM40_ElectricSnare.wav.analysis.json  GM41_LowFloorTom.wav.analysis.json  GM42_ClosedHiHat.wav.analysis.json  GM43_HighFloorTom.wav.analysis.json  GM44_PedalHiHat.wav.analysis.json  GM45_LowTom.wav.analysis.json  GM46_OpenHiHat.wav.analysis.json  GM47_LowMidTom.wav.analysis.json  GM48_HiMidTom.wav.analysis.json  GM49_CrashCymbal1.wav.analysis.json  GM50_HighTom.wav.analysis.json  GM51_RideCymbal1.wav.analysis.json  GM52_ChineseCymbal.wav.analysis.json  GM53_RideBell.wav.analysis.json  GM54_Tambourine.wav.analysis.json  GM55_SplashCymbal.wav.analysis.json  GM56_Cowbell.wav.analysis.json  GM57_CrashCymbal2.wav.analysis.json  GM58_Vibraslap.wav.analysis.json  GM59_RideCymbal2.wav.analysis.json  GM60_HiBongo.wav.analysis.json  GM61_LowBongo.wav.analysis.json  GM62_MuteHiConga.wav.analysis.json  GM63_OpenHiConga.wav.analysis.json  GM64_LowConga.wav.analysis.json  GM65_HighTimbale.wav.analysis.json  GM66_LowTimbale.wav.analysis.json  GM67_HighAgogo.wav.analysis.json  GM68_LowAgogo.wav.analysis.json  GM69_Cabasa.wav.analysis.json  GM70_Maracas.wav.analysis.json  GM71_ShortWhistle.wav.analysis.json  GM72_LongWhistle.wav.analysis.json  GM73_ShortGuiro.wav.analysis.json  (+8 more)
samples/variant-cache/: .gitignore
samples/variants/: .gitignore
scripts/: analyze_file.py  import_samples.py  regen_previews_png.py  similarity_report.py
subsample/: __init__.py  ambisonic.py  analysis.py  audio.py  bank.py  buffer.py  cache.py  channel.py  cli.py  config.py  detector.py  events.py  library.py  osc.py  player.py  preview.py  query.py  recorder.py  similarity.py  transform.py  trim.py  watcher.py
tests/: helpers.py  test_ambisonic.py  test_analysis.py  test_audio.py  test_bank.py  test_buffer.py  test_cache.py  test_channel.py  test_cli.py  test_config.py  test_detector.py  test_events.py  test_library.py  test_osc.py  test_player.py  test_player_path_loading.py  test_preview.py  test_query.py  test_recorder.py  test_similarity.py  test_transform.py  test_trim.py  test_watcher.py
