[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subsample"
version = "0.1.0"
description = "Ambient audio sample recorder"
requires-python = ">=3.12"
dependencies = [
	"PyAudio>=0.2.14",
	"PyYAML>=6.0",
	"numpy>=1.26",
	"librosa>=0.10",
	"scipy>=1.12",
	"soundfile>=0.12",
	"mido>=1.3",
	"python-rtmidi>=1.5",
	"pyrubberband>=0.4",
]

[project.optional-dependencies]
dev = [
	"mypy>=1.9",
	"pytest>=8.0",
	"scipy-stubs>=1.4",
	"types-pyaudio>=0.2.16",
	"types-PyYAML>=6.0.12",
]

[tool.setuptools.packages.find]
include = ["subsample*"]

[project.scripts]
subsample = "subsample.cli:main"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["mido", "mido.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyrubberband", "pyrubberband.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
	# librosa emits this when pyin finds no voiced frames (e.g. silent test audio).
	# Expected and handled downstream; suppressed here to keep test output clean.
	"ignore::UserWarning:librosa",
]
