[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subsample"
dynamic = ["version"]
description = "Automatic sample harvester, analyser, and MIDI instrument"
readme = "README.md"
authors = [{ name = "Simon Holliday", email = "simon.holliday@protonmail.com" }]
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
	"PyAudio>=0.2.14",
	"PyYAML>=6.0",
	"numpy>=1.26",
	"librosa>=0.10",
	"scipy>=1.12",
	"soundfile>=0.12",
	"mido>=1.3",
	"python-rtmidi>=1.5",
	"pyrubberband>=0.4",
	"watchdog>=4.0",
	"pymididefs @ git+https://github.com/simonholliday/PyMidiDefs.git",
]

[project.optional-dependencies]
osc = ["python-osc"]
supervisor = [
	"supervisor @ git+https://github.com/simonholliday/supervisor.git",
]
dev = [
	"mypy>=1.9",
	"pytest>=8.0",
	"scipy-stubs>=1.4",
	"types-pyaudio>=0.2.16",
	"types-PyYAML>=6.0.12",
]

[tool.setuptools_scm]
# Derives version from git tags (e.g. v0.1.0 → 0.1.0).

[tool.setuptools.packages.find]
include = ["subsample*"]

[tool.setuptools.package-data]
subsample = ["py.typed"]

[project.urls]
Repository = "https://github.com/simonholliday/subsample"
Issues = "https://github.com/simonholliday/subsample/issues"

[project.scripts]
subsample = "subsample.cli:main"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["mido", "mido.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyrubberband", "pyrubberband.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["watchdog", "watchdog.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["supervisor", "supervisor.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
	# librosa emits this when pyin finds no voiced frames (e.g. silent test audio).
	# Expected and handled downstream; suppressed here to keep test output clean.
	"ignore::UserWarning:librosa",
]
